# mazesolver

./: .clang-format  CMakeLists.txt  LICENCE  README.md
src/: main.c  maze.c  maze.h
